[package]
name = "safeselect"
version = "0.1.0"
edition = "2021"
documentation = "https://docs.rs/safeselect/"
homepage = "https://github.com/avl/safeselect/"
repository = "https://github.com/avl/safeselect/"
license = "MIT OR Apache-2.0"
description = "Opinionated replacement for tokio::select!, avoiding certain pitfalls."
readme = "../README.md"
keywords = ["async", "no_std"]
categories = ["asynchronous", "no-std", "no-std::no-alloc"]
rust-version = "1.75.0"

[lib]

[features]
default = ["futures", "std"]
std = []

[dependencies]
futures = { version = "0.3.31", optional = true }

[dev-dependencies]
tokio = {version = "1.48.0", features = ["full", "test-util"] }
