[package]
name = "aselect"
version = "0.3.0"
edition = "2021"
documentation = "https://docs.rs/aselect/"
homepage = "https://github.com/avl/aselect/"
repository = "https://github.com/avl/aselect/"
license = "MIT OR Apache-2.0"
description = "Opinionated replacement for tokio::select!, avoiding certain pitfalls."
readme = "README.md"
keywords = ["async", "no_std"]
categories = ["asynchronous", "no-std", "no-std::no-alloc"]
rust-version = "1.89.0"

[lib]

[features]
default = ["futures", "std"]
std = []

[dependencies]
futures = { version = "0.3.31", optional = true }

[dev-dependencies]
tokio = {version = "1.48.0", features = ["full", "test-util"] }
aselect = { path = ".", features = ["futures"]}
